--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
 
-  "name": "Link Preview Generator",
+  "name": "Sharable Link Generator",
   "description": "This extension will generate a link Preview for the selected site",
   "version": "1.0",
 
